# StreakChecker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __main__.py
src/app/: app.py
src/app/utils/: text_utils.py  textes.py  time_utils.py
src/config/: config.py
src/db/: database.db
src/db/database/: db_sqlite.py
src/db/gateway/: session.py  streak.py
src/db/init/: init_db.py
src/models/db/: session.py  streak.py
